// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PasswordInput renders masked as a snapshot 1`] = `
.c5 {
  position: relative;
}

.c0 {
  padding-bottom: 5px;
}

.c3 {
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 17px;
  line-height: 1.1em;
  -webkit-font-smoothing: antialiased;
  border: 0;
  outline: none;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-transition: all 0.25s;
  transition: all 0.25s;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  padding: 0 10px;
  line-height: initial;
}

.c1 {
  padding: 10px;
  box-shadow: none;
  -webkit-transition: border-color 0.25s;
  transition: border-color 0.25s;
  margin-right: 10px;
  resize: none;
  display: block;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 17px;
  line-height: 1.1em;
  -webkit-font-smoothing: antialiased;
  border: 1px solid #e5e5e5;
  -webkit-transition: border-color 0.25s;
  transition: border-color 0.25s;
  margin-right: 0;
  margin-top: 5px;
  margin-bottom: 10px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  height: 20px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: content-box;
}

.c1::-webkit-input-placeholder {
  color: #cccccc;
  text-overflow: ellipsis;
  line-height: normal;
}

.c1::-moz-placeholder {
  color: #cccccc;
  text-overflow: ellipsis;
  line-height: normal;
}

.c1:-ms-input-placeholder {
  color: #cccccc;
  text-overflow: ellipsis;
  line-height: normal;
}

.c1::placeholder {
  color: #cccccc;
  text-overflow: ellipsis;
  line-height: normal;
}

.c1:hover,
.c1:focus,
.c1.focused {
  border-color: #6e1fff;
  outline: 0;
}

.c1:disabled {
  border: 2px dotted #e5e5e5;
}

.c2 {
  font-family: Unica77LLWebMedium,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 12px;
  line-height: 1.4em;
  position: absolute;
  left: 10px;
  top: 10px;
  visibility: hidden;
  -webkit-animation: hSsjZP 0.2s linear;
  animation: hSsjZP 0.2s linear;
  -webkit-transition: visibility 0.2s linear;
  transition: visibility 0.2s linear;
  z-index: 1;
}

.c4 {
  position: absolute;
  right: 10px;
  z-index: 1;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <label
      className="c2"
    />
    <input
      className="c3"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      type="password"
      value=""
    />
    <span
      className="c4"
      onClick={[Function]}
    >
      <svg
        className="c5"
        height="18"
        onClick={[Function]}
        viewBox="0 0 18 18"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          Action/View/Md
        </title>
        <g
          fill="#000"
          fillRule="nonzero"
        >
          <path
            d="M2.249 8.462a.56.56 0 0 0 .016.601C4.172 11.9 6.406 13.286 9 13.286c2.594 0 4.828-1.387 6.736-4.225a.56.56 0 0 0 .017-.6C14.038 5.56 11.808 4.144 9.01 4.144S3.975 5.56 2.25 8.463zm-1.011-.574C3.163 4.652 5.77 3 9.01 3c3.241 0 5.843 1.653 7.755 4.89.331.561.31 1.257-.053 1.798-2.109 3.139-4.69 4.74-7.713 4.74-3.021 0-5.602-1.6-7.711-4.738a1.681 1.681 0 0 1-.05-1.802z"
          />
          <path
            d="M9 11.571a2.857 2.857 0 1 1 0-5.714 2.857 2.857 0 0 1 0 5.714zm0-1.142A1.714 1.714 0 1 0 9 7a1.714 1.714 0 0 0 0 3.429z"
          />
        </g>
      </svg>
    </span>
  </div>
</div>
`;

exports[`PasswordInput renders unmasked as a snapshot 1`] = `
.c5 {
  position: relative;
  vertical-align: middle;
}

.c0 {
  padding-bottom: 5px;
}

.c3 {
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 17px;
  line-height: 1.1em;
  -webkit-font-smoothing: antialiased;
  border: 0;
  outline: none;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-transition: all 0.25s;
  transition: all 0.25s;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  padding: 0 10px;
  line-height: initial;
}

.c1 {
  padding: 10px;
  box-shadow: none;
  -webkit-transition: border-color 0.25s;
  transition: border-color 0.25s;
  margin-right: 10px;
  resize: none;
  display: block;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 17px;
  line-height: 1.1em;
  -webkit-font-smoothing: antialiased;
  border: 1px solid #e5e5e5;
  -webkit-transition: border-color 0.25s;
  transition: border-color 0.25s;
  margin-right: 0;
  margin-top: 5px;
  margin-bottom: 10px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  height: 20px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: content-box;
}

.c1::-webkit-input-placeholder {
  color: #cccccc;
  text-overflow: ellipsis;
  line-height: normal;
}

.c1::-moz-placeholder {
  color: #cccccc;
  text-overflow: ellipsis;
  line-height: normal;
}

.c1:-ms-input-placeholder {
  color: #cccccc;
  text-overflow: ellipsis;
  line-height: normal;
}

.c1::placeholder {
  color: #cccccc;
  text-overflow: ellipsis;
  line-height: normal;
}

.c1:hover,
.c1:focus,
.c1.focused {
  border-color: #6e1fff;
  outline: 0;
}

.c1:disabled {
  border: 2px dotted #e5e5e5;
}

.c2 {
  font-family: Unica77LLWebMedium,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 12px;
  line-height: 1.4em;
  position: absolute;
  left: 10px;
  top: 10px;
  visibility: hidden;
  -webkit-animation: hSsjZP 0.2s linear;
  animation: hSsjZP 0.2s linear;
  -webkit-transition: visibility 0.2s linear;
  transition: visibility 0.2s linear;
  z-index: 1;
}

.c4 {
  position: absolute;
  right: 10px;
  z-index: 1;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <label
      className="c2"
    />
    <input
      className="c3"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      type="text"
      value=""
    />
    <span
      className="c4"
      onClick={[Function]}
    >
      <svg
        className="c5"
        height={20}
        onClick={[Function]}
        viewBox="0 0 12 12"
        width={20}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4.5,6s0,0,0,.08L6.07,4.51H6A1.5,1.5,0,0,0,4.5,6Z"
          fill="#c2c2c2"
        />
        <path
          d="M3.68,6.91A2.54,2.54,0,0,1,3.5,6,2.5,2.5,0,0,1,6,3.5a2.54,2.54,0,0,1,.91.18L8.19,2.4A6.14,6.14,0,0,0,6,2,6.75,6.75,0,0,0,0,6,7.9,7.9,0,0,0,2,8.56Z"
          fill="#c2c2c2"
        />
        <path
          d="M9.57,3.14l.78-.79-.7-.7-8,8,.7.7,1-1A6.08,6.08,0,0,0,6,10a6.75,6.75,0,0,0,6-4A7.67,7.67,0,0,0,9.57,3.14ZM6,8.5a2.46,2.46,0,0,1-1.37-.42l.73-.73a1.49,1.49,0,0,0,2-2l.73-.73A2.46,2.46,0,0,1,8.5,6,2.5,2.5,0,0,1,6,8.5Z"
          fill="#c2c2c2"
        />
      </svg>
    </span>
  </div>
</div>
`;
